tests/NormalTests/paczka1/small_fuzzy/33125771.err
Error in line 2: GEW A484 0,1
Error in line 10: GEW A849 98,7
Error in line 8: fv01C S589 0,0
Error in line 13: fv01C S65 10,5
